<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars_path_planner</name>
  <version>0.0.1</version>
  <description>The ars_path_planner metapackage</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ars_path_planner_srvs</depend>
  <depend>ars_path_planner_src</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
